# running_tray

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-CN.md  README.md  package.bat
.github/workflows/: release.yml
common/: CMakeLists.txt  autostartmanager.cpp  autostartmanager.h  common_exports.h  configmanager.cpp  configmanager.h  flowlayout.cpp  flowlayout.h  networkmanager.cpp  networkmanager.h  sharedmenumanager.cpp  sharedmenumanager.h  thememanager.cpp  thememanager.h
common/interface/: itrayloadplugin.cpp  itrayloadplugin.h
plugin/: CMakeLists.txt
plugin/cat/: CMakeLists.txt  runningcatplugin.cpp  runningcatplugin.h  runningcatplugin.json  runningcatplugin.qrc
plugin/cat/res/: runningcatplugin.qrc
plugin/timer/: CMakeLists.txt  timerplugin.cpp  timerplugin.h  timerplugin.json  timerplugin.qrc
plugin/weather/: CMakeLists.txt  weather_config.json  weatherconfig.cpp  weatherconfig.h  weatherplugin.cpp  weatherplugin.h  weatherplugin.json  weatherplugin.qrc
scripts/: build_deb.sh  build_dmg.sh  package.bat  test_build.sh
src/: appsettingswidget.cpp  appsettingswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plugincardwidget.cpp  plugincardwidget.h  pluginmanager.cpp  pluginmanager.h  pluginsettingswidget.cpp  pluginsettingswidget.h  resources.qrc
src/interface/: itrayloadplugin.h
src/resources/: app_icon.icns  styles.qss
